# zeiterfassung

./: LICENSE
.github/workflows/: pull_request_backend.yml  pull_request_frontend.yml
backend/: .gitignore  Cargo.toml  example.env
backend/.sqlx/: query-05a8556103f31e3d0a7d8de586417b9b83dbda453fdb12e1bc2293e4b4423981.json  query-15f52620202efc3b571fe36e8d1e8a54934045ae51d4db0a3f998a3d800da8ac.json
backend/migrations/: 20250927112533_initialize_region_table.sql
backend/src/: configuration.rs  db.rs  error.rs  lib.rs  main.rs  routes.rs
backend/src/models/: mod.rs  region.rs  region_history.rs
backend/src/repositories/: mod.rs  region_repositories.rs
backend/src/routes/: mod.rs
backend/tests/: routes.rs
backend/tests/resources/: invalid.env  valid.env
backend/tests/utils/: mod.rs
frontend/: .gitignore  .prettierrc  eslint.config.js  package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: service-worker.js
frontend/src/lib/: api.ts  regions.ts  state.svelte.ts
frontend/src/lib/components/: RegionButton.svelte
frontend/src/routes/: +layout.svelte  +page.svelte  page.svelte.spec.ts
frontend/static/: manifest.json
