[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "backend"

[dependencies]
axum = "0.8.4"
tower-http = { version = "0.6.6", features = ["fs"] }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "macros", "chrono"] }
serde = "1.0.226"
chrono = { version = "0.4.42", features = ["serde"] }
async-trait = "0.1.89"
dotenvy = "0.15.7"
envy = "0.4.2"
thiserror = "2.0.16"

[dev-dependencies]
http-body-util = "0.1.0"
tower = { version = "0.5.2", features = ["util"] }
